fix: fix comment style on mobile devices

--- a/theme/css/plugins.css
+++ b/theme/css/plugins.css
@@ -1,19 +1,19 @@
 :root {
-    --waline-font-size: 1em!important;
-    --waline-avatar-size: 3.25em!important;
-    --waline-badge-font-size: 0.65em!important;
+    --waline-font-size: .9em !important;
+    --waline-avatar-size: 3.25em !important;
+    --waline-badge-font-size: 0.65em !important;
 }
 
 .wl-card .wl-admin-actions {
-    font-size: 0.8em!important;
+    font-size: 0.8em !important;
 }
 
 .wl-header input {
-    font-size: 0.725em!important;
+    font-size: 0.725em !important;
 }
 
-#waline {
-    margin: 0 17%;
+.wl-editor:focus, .wl-input:focus {
+    background-color: white !important;
 }
 
 .wl-user > img,
@@ -26,31 +26,15 @@ button[title="表情包"] {
     display: none;
 }
 
+@media only screen and (min-width: 1000px){
+    #waline {
+        margin: auto 16%;
+    }
+}
+
 @media only screen and (max-width: 900px) and (orientation: landscape){
     #waline {
         margin: 0 1.75em;
     }
-    .wl-text-number {
-        display: none;
-    }
 }
 
-@media only screen and (max-width: 400px) and (orientation: portrait){
-    #waline {
-        padding: 0 5%;
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .wl-text-number {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1000px) and (orientation: portrait){
-
-    #waliner {
-        padding: 0 5%;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
